--- a/packages/brahma-firelight/package.json
+++ b/packages/brahma-firelight/package.json
@@ -2,7 +2,7 @@
   "name": "@brahma-1/brahma-firelight",
   "version": "1.0.0",
   "description": "This is a custom Rust runtime specially created to work with nodejs, denojs and bunjs by Shyam. M",
-  "main": "bundle.main.js",
+  "main": "tester.js",
   "keywords": [
     "NodeJs",
     "Rust",
@@ -11,5 +11,5 @@
     "DenoJs"
   ],
   "author": "Shyam20001",
-  "license": "MIT"
+  "license": "(MIT OR Apache-2.0)"
 }
